k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: termai-rerank
  labels:
    app: termai-rerank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: termai-rerank
  template:
    metadata:
      labels:
        app: termai-rerank
    spec:
      containers:
      - name: termai-rerank
        image: mingcsiro/termai-rerank:inference-latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"
            ephemeral-storage: "4Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
            ephemeral-storage: "8Gi"
